fixed scrollbars

--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -1,5 +1,6 @@
 .navbar {
     background-color:  var(--apptrack-primary);
+    height: 8vh;
 }
 
 .home {
@@ -32,4 +33,3 @@
 .dropdown-toggle::after {
     display: none; 
   }
-
